hydro_test_local/src/local/snapshots/hydro_test_local__local__chat_app__tests__chat_app_no_replay@graphvis_dot.snap
---
source: hydro_test_local/src/local/chat_app.rs
expression: "chat_server.meta_graph().unwrap().to_dot(& Default :: default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(users_stream)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) source_stream(messages)", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) map(\l    stageleft::runtime_support::fn1_type_hint::<\l        std::string::String,\l        std::string::String,\l    >({\l        use crate::__staged::local::chat_app::*;\l        |s| s.to_uppercase()\l    }),\l)\l", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) cross_join_multiset::<'static, 'tick>()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) for_each(\l    stageleft::runtime_support::fn1_type_hint::<\l        (u32, std::string::String),\l        (),\l    >({\l        use crate::__staged::local::chat_app::*;\l        let output__free = output;\l        |t| {\l            output__free.send(t).unwrap();\l        }\l    }),\l)\l", shape=house, fillcolor="#ffff88"]
    n2v1 -> n3v1
    n1v1 -> n4v1 [label="0"]
    n3v1 -> n4v1 [label="1"]
    n4v1 -> n5v1
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
        n3v1
        n4v1
        n5v1
        subgraph "cluster_sg_1v1_var_stream_0" {
            label="var stream_0"
            n1v1
        }
        subgraph "cluster_sg_1v1_var_stream_1" {
            label="var stream_1"
            n2v1
        }
        subgraph "cluster_sg_1v1_var_stream_2" {
            label="var stream_2"
            n3v1
        }
        subgraph "cluster_sg_1v1_var_stream_3" {
            label="var stream_3"
            n4v1
        }
    }
}
